Use proper syntax to open file at line for Eclipse
(cherry picked from commit a9c214f5bc6cb6711bcdd3d78e47923abd0735e7)