@@ -14,7 +14,7 @@ public enum Ide {
 
     // see for cli syntax of idea https://www.jetbrains.com/help/idea/opening-files-from-command-line.html
     IDEA("idea", List.of("--line", "{lineNumber}", "{fileName}"), List.of("--help")),
-    ECLIPSE("eclipse", Collections.emptyList(), Collections.emptyList()),
+    ECLIPSE("eclipse", List.of("--launcher.openFile", "{fileName}:{lineNumber}"), Collections.emptyList()),
     VSCODE("code", List.of("--goto", "{fileName}:{lineNumber}"), List.of("--version")),
     NETBEANS("netbeans", Collections.emptyList(), List.of("--help"));
 
